--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-        args: ["--maxkb=2000"]
+        args: ["--maxkb=5000"] # I updated this 'coz of the notebooks'
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
