Add L2 regularization to nottbook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,4 +43,9 @@ repos:
         "types_or": [python, pyi]
         exclude: ^tests/
         args:
-          ["--install-types", "--non-interactive", "--ignore-missing-imports"]
+          [
+            "--install-types",
+            "--non-interactive",
+            "--disallow-any-generics",
+            "--ignore-missing-imports",
+          ]
