--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,39 +2,28 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v4.5.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+      - id: check-docstring-first
       - id: check-added-large-files
-        args: ["--maxkb=5000"] # I updated this 'coz of the notebooks'
-  - repo: https://github.com/psf/black
-    rev: 22.10.0
+        args: ["--maxkb=2000"]
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.3.4
     hooks:
-      - id: black
-        language_version: python3.10
-  - repo: https://github.com/pycqa/isort
-    rev: 5.10.1
-    hooks:
-      - id: isort
-        name: isort (python)
-        args: ["--profile", "black"]
-  - repo: local
-    hooks:
-      - id: pylint
-        name: pylint
-        entry: pylint
-        language: system
-        types: [python]
-        args: [
-            "-rn", # Only display messages
-            "-sn", # Don't display the score
-            "--recursive=y",
-            "--rcfile=pyproject.toml", # Link to your config file
-          ]
+      # Run the linter.
+      - id: ruff
+        args: [--fix]
+        exclude: ^other_notes/Automations/Hydra/SimpleProject/
+      # Run the formatter.
+      - id: ruff-format
+
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.1.1
+    rev: v1.9.0
     hooks:
       - id: mypy
         name: mypy
@@ -44,8 +33,8 @@ repos:
         exclude: ^tests/
         args:
           [
-            "--install-types",
-            "--non-interactive",
-            "--disallow-any-generics",
             "--ignore-missing-imports",
+            "--disallow-any-generics",
+            "--config-file",
+            "./pyproject.toml",
           ]
